# ai-learnings

./: .gitignore  pyproject.toml
capstone-project/: disaster-tweets.ipynb  v.ipynb
kaggle/: index.py
llm/: t5-n.ipynb  t5.ipynb  textgen1.ipynb
nlp/: custom-word2vec.ipynb  medic_bot1.ipynb
nlp/classification/: medic_bot1.ipynb
nlp/regression/imdb-review/: review.ipynb
nlp/regression/positve-negative/: google-vector.ipynb  less-data.ipynb  more-data.ipynb
