[project]
name = "ai"
version = "0.1.0"
description = ""
authors = [
    {name = "BalajiSriraman",email = "96479581+BalajiSriraman@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorflow-macos>=2.15.0",
    "tensorflow-metal>=1.1.0",
    "matplotlib>=3.10.1",
    "ipykernel>=6.29.5"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
